--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hashzi-1",
+  "name": "Haster-1",
   "version": "1.3.2",
   "description": "Amazone project - a Whatsapp userbot helping to improve your Whatsapp experience.",
   "main": "./Hashzi-1/bot.js",
